# bidiffpatch

./: README.md  settings.gradle
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/example/lebronsn/bsdiffpatch/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: bs.c  bs.h  bsdiff.c  bspatch.c
app/src/main/java/com/example/lebronsn/bsdiffpatch/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/lebronsn/bsdiffpatch/: ExampleUnitTest.java
